--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head> <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-XVRZKQ1Q31"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-XVRZKQ1Q31');
-</script>
+    
+     
+    <!DOCTYPE html>
+<html lang="en">
 <head>
- 
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-XVRZKQ1Q31"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-XVRZKQ1Q31');
+  </script>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bandana Tiwari | Social Portfolio</title>
@@ -62,8 +65,6 @@
     <a href="https://www.instagram.com/123tiwaribandana_?igsh=MWhrbm9zcWhrZGU5cg%3D%3D&utm_source=qr" target="_blank">Follow on Instagram</a>
     <a href="https://www.facebook.com/share/1FH9o9Q1Jd/?mibextid=wwXIfr" target="_blank">Follow on Facebook</a>
   </div>
-
-  <!-- Google Analytics Script (add in Step 4) -->
 
 </body>
 </html>
