--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 
-    
-     
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <!-- Google tag (gtag.js) -->
@@ -14,8 +12,8 @@
     gtag('config', 'G-XVRZKQ1Q31');
   </script>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Bandana Tiwari | Social Portfolio</title>
   <style>
     body {
@@ -56,14 +54,23 @@
 </head>
 <body>
 
-  <img src="https://via.placeholder.com/150" alt="Profile Picture" class="profile">
+  <img src="https://via.placeholder.com/150" alt="Profile Picture" class="profile" />
   <h1>Bandana Tiwari</h1>
   <p>Content Creator | Lifestyle & Dance</p>
 
   <div class="social-links">
-    <a href="https://www.tiktok.com/@baandaanna?_t=ZS-8yOSuP8xkqm&_r=1" target="_blank">Follow on TikTok</a>
-    <a href="https://www.instagram.com/123tiwaribandana_?igsh=MWhrbm9zcWhrZGU5cg%3D%3D&utm_source=qr" target="_blank">Follow on Instagram</a>
-    <a href="https://www.facebook.com/share/1FH9o9Q1Jd/?mibextid=wwXIfr" target="_blank">Follow on Facebook</a>
+    <a href="https://www.tiktok.com/@baandaanna" target="_blank"
+       onclick="gtag('event', 'click', { 'event_category': 'Social', 'event_label': 'TikTok' });">
+       Follow on TikTok
+    </a>
+    <a href="https://www.instagram.com/123tiwaribandana_" target="_blank"
+       onclick="gtag('event', 'click', { 'event_category': 'Social', 'event_label': 'Instagram' });">
+       Follow on Instagram
+    </a>
+    <a href="https://www.facebook.com/share/1FH9o9Q1Jd/" target="_blank"
+       onclick="gtag('event', 'click', { 'event_category': 'Social', 'event_label': 'Facebook' });">
+       Follow on Facebook
+    </a>
   </div>
 
 </body>
