--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
        onclick="gtag('event', 'click', { 'event_category': 'Social', 'event_label': 'Facebook' });">
        Follow on Facebook
     </a>
+    <a href="https://www.youtube.com/@bandanatiwari9418/videos?utm_source=website&utm_medium=referral&utm_campaign=social_links" 
+   target="_blank" rel="noopener noreferrer"
+   onclick="gtag('event', 'click', { 'event_category': 'Social', 'event_label': 'YouTube' });">
+   Follow on YouTube
+</a>
+
   </div>
 
 </body>
