--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
 </head>
 <body>
 
-  <img src="https://via.placeholder.com/150" alt="Profile Picture" class="profile" />
+  <img src="https://raw.githubusercontent.com/Bandana-s/Bandana-s.github.io/main/MYPICTURE.jpg" alt="Profile Picture" class="profile" />
+
   <h1>Bandana Tiwari</h1>
   <p>Content Creator | Lifestyle & Dance</p>
 
